5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1758_1185.log
== SUBMITION (2019-05-30 00:54:38) 
-- CODE:
from numpy import * 

glic = array(eval(input("Vetor de glicose: ")))
i = 0
cont = 0

while(i < size(glic)):
	if(glic{i} > 99):
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)

-- EXECUTION TIME:
0.132147
-- ERROR:
  File "/home/codebench/codes/1758/1185/main.py", line 8
    if(glic{i} > 99):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:56:11) 
-- CODE:
from numpy import * 

glic = array(eval(input("Vetor de glicose: ")))

i = 0
cont = 0

while(i < size(glic)):
	if(glic[i] > 99):
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)

-- EXECUTION TIME:
0.287582
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
